# corral

./: .gitmodules  CMakeLists.txt  README.md  build.sh  minshell.html
include/SDL3/: SDL_revision.h
src/: app.cpp  app.h  common.h  game.cpp  game.h  grid.cpp  grid.h  input.h  main.cpp  path.cpp  path.h  puzzle.cpp  puzzle.h  random.h  resource_manager.cpp  resource_manager.h
src/events/: event.cpp  event.h  mouse_event.cpp  mouse_event.h
src/ui/: view.cpp  view.h  view_controller.cpp  view_controller.h
src/ui/elements/: button.cpp  button.h  div.cpp  div.h  dropdown.cpp  dropdown.h  icon.cpp  icon.h  label.cpp  label.h
